--- a/homework3.css
+++ b/homework3.css
@@ -33,7 +33,7 @@ body{
     background: linear-gradient(
         rgba(0, 0, 0, 0.12), 
         rgba(0, 0, 0, 0.12)
-      ),url("http://csci571.com/hw/hw3/images/snow1.jpg");
+      ),url("snow1.jpg");
     background-position-x: -123px;
     background-size: 894px;
     background-repeat: no-repeat;
@@ -128,19 +128,19 @@ body{
 }
 
 #img2{
-    background-image: url("http://csci571.com/hw/hw3/images/snow2.jpg");
+    background-image: url("snow2.jpg");
 }
 
 #img3{
-    background-image: url("http://csci571.com/hw/hw3/images/snow3.jpg");
+    background-image: url("snow3.jpg");
 }
 
 #img4{
-    background-image: url("http://csci571.com/hw/hw3/images/snow4.jpg");
+    background-image: url("snow4.jpg");
 }
 
 #img5{
-    background-image: url("http://csci571.com/hw/hw3/images/snow5.jpg");
+    background-image: url("snow5.jpg");
 }
 
 .text7{
@@ -163,7 +163,7 @@ body{
 #block4{
     position: relative;
     height: 580px;
-    background-image: url("http://csci571.com/hw/hw3/images/snow6.jpg");
+    background-image: url("snow6.jpg");
     background-color: white;
     background-position-x: -191px;
     background-position-y: bottom;
